platform/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - longhorn.watworld.uk
      secretName: longhorn-tls
  rules:
    - host: longhorn.watworld.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
